<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="view"
            type="com.example.yue.demo.data.View"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <android.support.v7.widget.Toolbar
            android:id="@+id/view_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSub"
            >

        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/view_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginStart="16dp"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:text="@{view.name}"
                android:textSize="28sp"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:textSize="28sp"
                android:textColor="@color/colorPrice"
                android:text="@{view.ticket}"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_intro"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{view.intro}"
                    android:textColor="@color/colorSub" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_strategy"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/view_strategy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{view.strategy}" />

                <Button
                    android:id="@+id/view_show_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:text="@string/view_path"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/view_route"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:visibility="gone"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>